Adding Flex Files

--- a/week4/index.html
+++ b/week4/index.html
@@ -3,9 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <title>Learning Flex Box Layouts</title>
+    <link rel="stylesheet" href="flex-layout.css">
 </head>
 
 <body>
+  <main class="wrapper">
+    <header>
+      <h1>Header</h1>
+    </header>
+    <section class="layout-row">
+      <nav class="layout-row--nav">
+        nav
+      </nav>
+      <article class="layout-row--maincontent">
+        <h2>Lorem ipsum dolor sit.</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse enim officiis consequatur rem exercitationem perspiciatis provident vero harum voluptates praesentium, repudiandae porro possimus, repellendus optio quae, voluptate veniam natus! Vero.</p>
+        <p>Quaerat ullam libero minus, voluptate neque, placeat reprehenderit quo facere aliquam quibusdam dolore aut. Aspernatur labore temporibus nisi, distinctio minus omnis in vitae sit tenetur, recusandae, illum neque at impedit.</p>
+        <p>Excepturi vitae ipsam a, dolorum enim, obcaecati temporibus perferendis omnis quod doloribus sint. Error tempora ipsum ipsam animi illum, optio deserunt praesentium fugit beatae quam itaque distinctio, cum aut delectus!</p>
+        <p>Doloribus alias minima dolorum facere. Accusamus dignissimos incidunt odit temporibus in error praesentium distinctio perspiciatis atque ea iusto, hic tenetur nesciunt omnis ullam nam, autem assumenda illum voluptatem officiis enim.</p>
+      </article>
+      <aside class="layout-row--sidebar">
+        <h3>Lorem ipsum.</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit voluptates magni nam, ullam, suscipit aspernatur, sapiente deleniti adipisci itaque quo corporis, mollitia assumenda enim dignissimos at harum accusantium commodi. Laborum.</p>
+      </aside>
+    </section>
+    <footer>
+      footer
+    </footer>
+  </main>
+
 
 </body>
 </html>
