--- a/week5/4-responsive/index.html
+++ b/week5/4-responsive/index.html
@@ -11,13 +11,35 @@
 <body>
 <div class="wrapper">
   <header class="global-header">
-
+    <div class="logo"><a href="index.html">SVA HTML</a></div>
+    <ul class="header-links">
+      <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
   </header>
   <div class="art">
-
+    <picture>
+      <source srcset="https://unsplash.it/1000/100?image=1079" media="(min-width: 600px)">
+      <img src="https://unsplash.it/600/75?image=1079" alt="">
+    </picture>
   </div>
   <article class="main-content">
-
+    <h1>Article Title</h1>
+    <h2>Article Subtitle</h2>
+      <div class="main-photo">
+        <picture>
+          <source srcset="https://unsplash.it/200/400?image=964" media="(min-width: 600px)">
+          <img src="https://unsplash.it/400/200?image=964" alt="">
+        </picture>
+        <p>The Long Road</p>
+      </div>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, delectus. Amet ut voluptatum deleniti doloremque suscipit ipsam perspiciatis illo, impedit labore quidem nisi quas. Eos accusamus, enim officiis quae quas odio vitae officia libero eveniet blanditiis exercitationem deleniti modi ex autem facere provident obcaecati deserunt, optio consectetur iure possimus ipsum. Blanditiis, dolorem aspernatur quas. Laboriosam tempore perferendis sit sint eveniet, distinctio, impedit. </p>
+      <p>Quasi, fugit dolores vitae et beatae repudiandae. Ducimus ad a dolorem, rerum neque itaque odio nesciunt cupiditate nihil ipsam veritatis impedit adipisci ex. Consequuntur ducimus suscipit minus quia. Quo neque debitis eaque delectus asperiores accusantium, consequuntur harum ullam ducimus laboriosam consectetur iste, enim impedit quae fugit veniam officiis. Perferendis blanditiis consequatur accusantium laudantium facere possimus autem, fuga pariatur, minus, magnam ducimus iusto aspernatur. Perferendis perspiciatis, omnis odio molestias obcaecati atque, quas dignissimos nam temporibus cupiditate beatae rerum sit esse et, autem amet eos deserunt recusandae pariatur cumque voluptas quasi sed id modi. Dicta exercitationem excepturi fuga recusandae, est pariatur. Qui.</p>
+      <blockquote>
+      <p>Eius impedit similique optio officia temporibus quis voluptatem, ullam dolor ad? Eum ad, eligendi iste illum asperiores odio dolorum perferendis maxime maiores aliquid quae praesentium illo veniam aperiam officiis a ratione nisi dolore quas iusto doloremque blanditiis aspernatur nihil neque deleniti! Omnis possimus commodi, distinctio explicabo blanditiis voluptates aperiam ut recusandae nisi.</p>
+      </blockquote>
+      <p>Non deserunt esse incidunt reprehenderit tenetur debitis repellendus blanditiis, quos, ea iste sed laudantium minus inventore totam facere ut dignissimos dicta voluptatum minima. Obcaecati a ad cum sequi eveniet. Numquam quos est ratione mollitia eius incidunt debitis, dignissimos repellat sed cum quo quod maiores omnis vitae aspernatur esse non eos illo consequatur dolorem. Temporibus ipsam alias, ex quaerat eveniet, quisquam ipsa reiciendis similique expedita laborum porro harum officiis, itaque in eius ut iste nesciunt pariatur quasi. Recusandae corrupti nam quo, dolores in repellat amet accusantium maxime, illum dicta accusamus nulla officiis doloribus eius, voluptatibus tempore quos. Dignissimos ipsam voluptatibus necessitatibus.</p>
   </article>
   <footer class="global-footer">
 
